# blueboat

./: .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  Makefile  README.md  all.Dockerfile  baseenv.Dockerfile  build.rs  build.sh  build_docker.sh  docker_config.sh.inc  fetchd.Dockerfile  k8s_rewrite.sh  pnpm-lock.yaml  proxy.Dockerfile  push_docker_local.sh  remote_deploy.sh  run_all.sh  run_dev.sh  run_dev_single_tenant.sh  runtime.Dockerfile  rust-toolchain  secure_mode_syscalls.json  sqlutil.md
.cargo/: config
.cargo-ci/: config
.github/: dependabot.yaml
.github/workflows/: build-and-test.yml  ci.yml  main.yml
benches/: api_benchmark.rs
benchmark/: hello_world.js  spawn_many.sh
debian/: server.env
debian/systemd/: blueboat@.service
docker/: Dockerfile  run.sh
docker-test/: boot.sh  config.toml
docs/: mds.md
examples/: build_pkg.sh  exceptions.js  hello_world.js  pkg.kv.json  reverse_proxy.js  reverse_proxy.ts  tail_logs.js  tail_logs.ts
examples/pkg/: bench.ts  crypto.ts  embedded.txt  graphics.ts  index.ts  tsconfig.json  validation.ts  world.mjs
examples/pkg/static/: index.html  style.css
examples/pkg/subdir/: hello.js
jsland/: .gitignore  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  webpack.config.js
jsland-types/: .gitignore  build.sh  package.json
jsland/scripts/: build_schema.mjs
jsland/src/: apns.ts  app.ts  console.ts  crypto.ts  fetch.js  host_object.ts  index.ts  init.js  mysql.ts  native.d.ts  router.ts  serve_static.ts  template.ts  text_codec.ts  timeout.ts  url.d.ts  util.ts
jsland/src/background/: impl.ts  index.ts
jsland/src/codec/: index.ts  multipart.ts
jsland/src/compress/: index.ts  zstd.ts
jsland/src/dataset/: index.ts  mime.ts
jsland/src/external_service/: index.ts
jsland/src/external_service/aws/: index.ts
jsland/src/graphics/: canvas.ts  index.ts  layout.ts  layout_box.ts  layout_component.ts  layout_draw.ts  layout_native.ts  layout_solver.ts  layout_util.ts  text.ts
jsland/src/kv/: index.ts
jsland/src/native_crypto/: aead.ts  ed25519.ts  hmac.ts  index.ts  jwt.ts  x25519.ts
jsland/src/pubsub/: index.ts
jsland/src/text/: index.ts  json.ts  markdown.ts  yaml.ts
jsland/src/text/dom/: index.ts
jsland/src/validation/: index.ts  jtd.ts
k8s/deployments/: fetchd.yaml  proxy.yaml  runtime-1.yaml  runtime-2.yaml  runtime-X.yaml  runtime.yaml
k8s/services/: fetchd.yaml  proxy.yaml  runtime-1.yaml  runtime-2.yaml  runtime-X.yaml  runtime.yaml
librt/: package-lock.json  package.json  webpack.config.js
librt/src/: index.js  kv.js  std.js  subtle_crypto.js  url.js
mds_ts/: README.md  build.mjs  package-lock.json  package.json
mds_ts/input/: compare_and_set_many.js  get_many.js  prefix_delete.js  prefix_list.js
mds_ts/output/: compare_and_set_many.js  get_many.js  prefix_delete.js  prefix_list.js
mdsproto/: mds.proto
misc/: Caddyfile
playground/: build_bundles.sh  bundle_single.sh
playground/config/: atomic-counter.toml  catastrophic-backtracking.toml  digest.toml  hello.toml  kvlog.toml  long-detach.toml  long.toml  mle-string-init.toml  reverse-proxy.toml
playground/scripts/: atomic-counter.js  catastrophic-backtracking.js  counter.js  digest.js  hello.js  kvlog.js  long-detach.js  long.js  mle-arraybuffer-fetch.js  mle-string-init.js  reverse-proxy.js
release_scripts/: ec2_graviton_ubuntu_dep_and_build.sh
release_scripts/arm64cross/: .gitignore  build.sh
release_scripts/arm64cross/buildbox/: Dockerfile  entrypoint.sh  prepare.sh
release_scripts/arm64cross/releasebox/: Dockerfile
rusty-workers/: Cargo.toml
rusty-workers-cli/: Cargo.toml
rusty-workers-cli/src/: main.rs
rusty-workers-cp/: Cargo.toml
rusty-workers-cp/src/: main.rs  types.rs
rusty-workers-fetchd/: Cargo.toml
rusty-workers-fetchd/src/: main.rs  server.rs
rusty-workers-playground-api/: Cargo.toml
rusty-workers-playground-api/src/: main.rs  types.rs
rusty-workers-proxy/: Cargo.toml  config.toml
rusty-workers-proxy/src/: config.rs  main.rs  sched.rs
rusty-workers-runtime/: Cargo.toml
rusty-workers-runtime/src/: buffer.rs  config.rs  crypto.rs  engine.rs  error.rs  executor.rs  interface.rs  io.rs  isolate.rs  main.rs  mm.rs  remote_buffer.rs  runtime.rs  semaphore.rs  server.rs
rusty-workers/src/: app.rs  db.rs  kv.rs  lib.rs  rpc.rs  types.rs  util.rs
scripts/: build_and_upload.mjs  run_server.sh  run_with_memlimit.sh  strace_refine_forked.mjs
sql/: migration_000001.sql
sql/migration_000001/: appkv.sql  applog.sql  apps.sql  bundles.sql  routes.sql
sql/migration_v1/: applog.sql
src/: app_mysql.rs  backoff.rs  bootstrap.rs  consts.rs  ctx.rs  exec.rs  generational_cache.rs  gres.rs  headers.rs  ipc.rs  kvutil.rs  lib.rs  logsvc.rs  lpch.rs  metadata.rs  objserde.rs  package.rs  package_loader.rs  pm.rs  registry.rs  reliable_channel.rs  secure_mode.rs  server.rs  task.rs  util.rs  v8util.rs  wpbl.rs
src/api/: apns.rs  fetch.rs  host_object.rs  mod.rs  mysql.rs  task.rs  tera.rs  testutil.rs  text_codec.rs  util.rs
src/api/codec/: mod.rs  multipart.rs
src/api/compress/: mod.rs  zstd.rs
src/api/crypto/: aead.rs  curve25519.rs  hmac.rs  jwt.rs  mod.rs
src/api/dataset/: mime.rs  mod.rs
src/api/graphics/: canvas.rs  codec.rs  draw.rs  font_util.rs  fonts.rs  mod.rs  svg.rs  text.rs
src/api/graphics/layout/: mod.rs
src/api/kv/: mod.rs
src/api/pubsub/: mod.rs
src/api/text/: json.rs  markdown.rs  mod.rs  yaml.rs
src/api/text/dom/: mod.rs  query.rs  repr.rs
src/api/validation/: jtd.rs  mod.rs
src/mds/: config.rs  config_v2.rs  keycodec.rs  mod.rs  raw.rs  service.rs
src/mkimage/: mod.rs
src/pubsub/: mod.rs  mq.rs  sse.rs
