[package]
name = "blueboat"
version = "0.2.14-alpha.1"
edition = "2021"
authors = ["Heyang Zhou <heyang.zhou@icloud.com>"]
description = "The monolithic runtime for modern web backends."
license = "AGPL-3.0-or-later"
repository = "https://github.com/losfair/blueboat"
readme = "README.md"

[package.metadata.deb]
maintainer-scripts = "debian/maintainer-scripts/"
assets = [
  ["target/release/blueboat_server", "usr/bin/", "755"],
  ["debian/server.env", "etc/blueboat/server.env", "600"],
]
conf-files = ["etc/blueboat/server.env"]

[package.metadata.deb.systemd-units]
unit-scripts = "debian/systemd/"
enable = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1
panic = "abort"

[profile.release]
panic = "abort"
incremental = true

[dependencies]
smr = "0.1.2"
v8 = "0.45.0"
serde_v8 = { git = "https://github.com/denoland/deno", rev = "20cbd7f0f8f0e0ff4d6656f2fa7e93e01b8805f0" }
parking_lot = "0.11.2"
serde = { version = "1", features = ["derive"] }
async-trait = "0.1.51"
anyhow = "1"
thiserror = "1"
tokio = { version = "1.14.0", features = ["full", "tracing"] }
console-subscriber = "0.1.6"
hyper = { version = "0.14", features = ["full"] }
structopt = "0.3"
log = "0.4"
serde_json = "1"
itertools = "0.10.3"
rand = "0.8"
phf = { version = "0.10", features = ["macros"] }
sysinfo = "0.20.3"
reqwest = "0.11.7"
ring = "0.16.20"
mysql_async = { git = "https://github.com/losfair/mysql_async", rev = "f976f8683b4db3bef465b00e44e08087ada337a4" }
flume = "0.10.9"
time = { version = "0.2", features = ["serde"] }
uuid = "0.8"
futures = { version = "0.3", features = ["executor"] }
a2 = "0.6.0"
base64-serde = "0.6.1"
base64 = "0.13"
schemars = { version = "0.8.3", features = ["bytes"] }
num-derive = "0.3.3"
num-traits = "0.2.14"
hex = "0.4.3"
syscallz = "0.16"
prctl = "1.0.0"
nix = "0.23"
tempdir = "0.3.7"
tar = "0.4"
skia-safe = "0.46"
z3 = "0.11"
css-color-parser = "0.1.2"
fontdue = "0.5"
once_cell = "1.8"
regex = "1.5"
memmap = "0.7"
ttf-parser = { version = "0.17", default-features = false }
byteorder = "1.4.3"
resvg = "0.18"
tiny-skia = "0.6"
usvg = "0.18"
ed25519-dalek = "1.0.1"
x25519-dalek = "1.2.0"
curve25519-dalek = "3.2.0"
sha2 = "0.10.0"
rusoto_core = "0.47"
rusoto_s3 = { version = "0.47" }
rusoto_signature = "0.47"
maxminddb = { version = "0.21.0", features = ["mmap"] }
memmap2 = { version = "0.3.0" }
tera = "1.15.0"
jtd = "0.3.1"
multer = "2.0.1"
bytes = { version = "1.1.0", features = ["serde"] }
mime = "0.3.16"
mime_guess = "2.0.3"
rusqlite = "0.27.0"
chrono = "0.4.19"
pulldown-cmark = "0.8.0"
ammonia = "3.1.2"
bumpalo = "3.8.0"
fraction = "0.9.0"
lazy_static = "1.4.0"
serde_yaml = "0.8"
jsonwebtoken = "7"
rdkafka = "0.28.0"
prost = "0.9"
prost-types = "0.9"
tokio-tungstenite = { version = "0.16", features = ["native-tls"] }
bincode = "1"
typetag = "0.1"
erased-serde = "0.3"
either = "1"
rmp-serde = "0.15"
blake3 = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hostname = "0.3"
md-5 = "0.10.0"
aes-gcm-siv = "0.10.3"
hmac = "0.12.0"
zstd = "0.9.2"
markup5ever_rcdom = "0.1.0"
html5ever = "0.25.1"
markup5ever = "0.10.1"
xml5ever = "0.16.2"
string_cache = "0.8.3"
foundationdb = "0.6"
indexmap = "1.8.2"
sqlite-cache = "0.1.3"
moka = { version = "0.9.0", features = ["sync"] }
url = "2.2.2"

[build-dependencies]
prost-build = "0.9"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "api_benchmark"
harness = false
