[package]
name = "rusty-workers-fetchd"
version = "0.0.0"
authors = ["losfair <zhy20000919@hotmail.com>"]
edition = "2018"
license = "GPL-3.0"
description = "Fetch daemon for rusty-workers"
repository = "https://github.com/losfair/rusty-workers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
rusty-workers = { path = "../rusty-workers" }
structopt = "0.3"
pretty_env_logger = "0.4"
log = "0.4"
futures = "0.3"
serde_json = "1"
serde = { version = "1", features = ["derive"] }

# TODO: use crates.io version after the new version with Tokio 1.0 is published
reqwest = "0.11"
