[package]
name = "rusty-workers-runtime"
version = "0.0.0"
authors = ["losfair <zhy20000919@hotmail.com>"]
edition = "2018"
license = "GPL-3.0"
description = "Runtime for rusty-workers"
repository = "https://github.com/losfair/rusty-workers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
