[package]
name = "rusty-workers-runtime"
version = "0.0.0"
authors = ["losfair <zhy20000919@hotmail.com>"]
edition = "2018"
license = "GPL-3.0"
description = "Runtime for rusty-workers"
repository = "https://github.com/losfair/rusty-workers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty_v8 = { version = "0.22" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
rusty-workers = { path = "../rusty-workers" }
structopt = "0.3"
pretty_env_logger = "0.4"
log = "0.4"
futures = "0.3"
lru_time_cache = "0.11"
serde_json = "1"
maplit = "1"
serde = { version = "1", features = ["derive"] }
slab = "0.4"
rand = "0.8"
tar = "0.4"
crossbeam = "0.8"
ring = "0.16"
send_wrapper = "0.5"
mysql_async = "0.27"
