[package]
name = "rusty-workers"
version = "0.0.0"
authors = ["losfair <zhy20000919@hotmail.com>"]
edition = "2018"
license = "GPL-3.0"
description = "Lightweight workers at the edge."
repository = "https://github.com/losfair/rusty-workers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tarpc = { version = "0.24", features = ["full"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
log = "0.4"
tokio-serde = { version = "0.8", features = ["bincode"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
rand = "0.8"
hex = "0.4"
